V3, (added pagination,and many more!

--- a/style.css
+++ b/style.css
@@ -1,14 +1,45 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    word-wrap: break-word;
+    line-height: 2rem;
+}
 .nav-bar{
+  
+}
+.main-bar{
+    display: flex;
+    justify-content: space-between;
     background-color: black;
-    overflow: hidden;
     width: 100%;
     position: fixed;
     top: 0;
-    z-index: 2;
+    z-index: 90;
+    flex-wrap: wrap;
 }
-.nav-bar-list{
+.side-bar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 250px;
+    height: 100vh;
+    background-color: black;
+    z-index: 100;
+    display: none;
+}
+.side-bar-wrapper{
+    display: flex;
+    flex-direction: column;
+}
+.side-bar-list{
+    display: flex;
+    flex-direction: column;
+    margin: 50px 0px 0px 0px;
     list-style-type: none;
-    float: left;
+}
+.main-bar-list{
+    list-style-type: none;
     display: flex;
     justify-content: center;
 }
@@ -18,33 +49,58 @@
     padding: 10px;
     color: white;
     text-align: center;
+    transition: color 0.15s, background-color 0.15s;
 }
 .nav-bar-elements:hover{
-    background-color: grey;
+    background-color: #2d3436;
+    color: #00aeff;
 }
 .a-removed-style{
     text-decoration: none;
     color: inherit;
 }
-body{
-    margin: 0px;
-    padding: 80px 0px 0px 0px;
-    background-color: #1e272e;
+.menu-icon{
+    color: #54a0ff;
+    font-size: 4rem;
+    display: none;
 }
-.card-container{ /* Container to contain all the cards */
+
+.menu-icon:hover,.cancel-icon:hover{
+    cursor: pointer;
+}
+.cancel-icon{
+    font-size: 5rem;
+    color: white;
+}
+.hide-on-mobile{
+    display: inline-block;
+}
+.side-bar-enabled{
+    display: inline-block;
+}
+body{
+    padding: 80px 0px;
+    background-color: #1e272e;
+    overflow-x: hidden;
+}
+.card-section{
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start;
+}
+.card-container{ /* Container to contain all the cards */
+    display: grid;
+    grid-template-columns: repeat(3,300px);
+    justify-items: center;
+    gap: 50px;
+    margin: 5% 0px;
 }
 .card{ /* Card CSS */
     max-width: 300px;
     width: 100%;
     transition: box-shadow 0.15s,transform 0.15s;
     flex: 1 1 0;
-    margin: 50px;
     flex-wrap: wrap;
-    min-width: 300px; 
+    min-width: 150px; 
     position: relative; /* Ensure the ::after pseudo-element is positioned relative to .card */
 }
 .card::after{
@@ -64,11 +120,11 @@ body{
 .card:hover{ 
     box-shadow: 2px 2px 10px black;
     transform: scale(1.05);
-    cursor: pointer;
 }
 .card-image-container{ /* Container to contain card's image */
     max-width: 300px;
-    width: 300px;
+    width: 100%;
+    min-width: 150px;
     max-height: 200px;
     height: 200px;
     flex: 1 1 0;
@@ -112,7 +168,7 @@ body{
     text-align: center;
     background-color: #292f33;
     color: white;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: bold;
     padding: 10px;
     transition: box-shadow 0.15s, transform 0.15s;
@@ -145,7 +201,7 @@ body{
 }
 .overview-heading,.contents-heading,.questions-heading{
     color: white;
-    font-size: 30px;
+    font-size: 1.875rem;
     font-weight: bolder;
     background-color: #4b6584;
     padding: 8px 15px;
@@ -155,7 +211,7 @@ body{
     cursor: pointer;
 }
 .over-view-text,.question-text{
-    font-size: 15px;
+    font-size: 0.938rem;
     color: white;
     font-family: Roboto-Light;
     margin: 0px 15px 10px 15px;
@@ -194,13 +250,12 @@ body{
 .contents-text-container:hover{
     box-shadow: 2px 2px 10px black;
     background-color: grey;
-    cursor: pointer;
 }
 .contents-text-container:active{
     transform: scale(0.98);
 }
 .contents-text{
-    font-size: 20px;
+    font-size: 1.25rem;
     color: white;
     font-family: Roboto-Light;
     margin: 0px;
@@ -217,7 +272,7 @@ body{
     cursor: pointer;
 }
 .question-title{
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: bold;
     background-color: #718093;
     color: white;
@@ -255,4 +310,86 @@ body{
     font-family: Roboto-Light;
     text-align: center;
     padding: 30px;
+}
+
+.pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    border: 1px green solid;
+    padding: 20px 40px;
+    flex-wrap: wrap;
+}
+.pagination ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    list-style-type: none;
+    flex: 1 1 0;
+    max-width: max-content;
+    border: red solid 1px;
+}
+.pagination a{
+    text-decoration: none;
+    color: inherit;
+}
+.pagination-link{
+    border-radius: 50%;
+    border: 1px black solid;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: clamp(1.1rem, 5vh, 1.4rem);
+    color: white;
+    flex: 1 1 0;
+    background-position: 0 -45px;
+    transition: background-color 0.15s , background-position 0.5s;
+}
+.pagination-link:hover{
+    cursor: pointer;
+}
+.pagination-link:hover:not(.active-pagination-link){
+    background-color: #333c44;
+   
+}
+.pagination-arrow-links{
+    color: white;
+    font-size: clamp(1.4rem, 5vh, 2rem);
+    text-align: center;
+    display: flex;
+    align-items: center;
+    transition: color 0.15s;
+}
+.pagination-arrow-links:hover{
+    color: gray;
+}
+.active-pagination-link{
+    background-image: linear-gradient(#4664b5, #3152a4,#6a89cc,#4b6397);
+    background-position: 0 0;
+}
+@media (max-width:800px) {
+    .card-container{
+        grid-template-columns: 1fr; /*make one card show horizontally only*/
+    }
+    .menu-icon{
+        display: block;
+    }
+    .hide-on-mobile{
+        display: none;
+    }
+}
+@media (max-width:1100px) and (min-width:801px) {
+    .card-container{
+        grid-template-columns: repeat(2,1fr); /*make one card show horizontally only*/
+    }
+    .menu-icon{
+        display: block;
+    }
+    .hide-on-mobile{
+        display: none;
+    }
 }
