V5(Separated navbar in a separate file, added data-driven approach, generating cards with data, 13 cards in page 1

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ body{
     display: grid;
     grid-template-columns: repeat(3,300px);
     justify-items: center;
+    align-items: flex-start;
     gap: 50px;
     margin: 5% 0px;
 }
