V6(Dynamic Pagination, Added data for 100+ cards currently, Contact page complete

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     word-wrap: break-word;
-    line-height: 2rem;
+    line-height: 2.1rem;
 }
-.nav-bar{
-  
+body{
+    padding: 80px 0px;
+    background-color: #1e272e;
+    overflow-x: hidden;
+    --default-text-color:white;
 }
 .main-bar{
     display: flex;
@@ -77,11 +82,6 @@
 }
 .side-bar-enabled{
     display: inline-block;
-}
-body{
-    padding: 80px 0px;
-    background-color: #1e272e;
-    overflow-x: hidden;
 }
 .card-section{
     display: flex;
@@ -216,10 +216,6 @@ body{
     color: white;
     font-family: Roboto-Light;
     margin: 0px 15px 10px 15px;
-}
-@font-face {
-    font-family: Roboto-Light;
-    src: url(fonts/Roboto-Medium.ttf);
 }
 .contents-content{ /* Contains the content about the content section and acts as a colorful b.g */
     background-color: #8395a7;
